--- a/style.css
+++ b/style.css
@@ -1,25 +1,66 @@
 * {
     margin: 0;
     padding: 0;
-    font-family:Helvetica, Arial, sans-serif
+    font-family: Helvetica, Arial, sans-serif;
+    --theme-color: #1A92D3;
 }
 
-.main {
+.container {
     display: grid;
-    grid-template-columns: 20% 1fr 1fr 1fr;
+    grid-template-columns: 18% 1fr;
+    grid-template-rows: 100px 1fr;
     grid-template-areas:
-    "sidebar navbar navbar navbar"
-    "sidebar content content content"
-    "sidebar content content content"
-    "sidebar content content content"
-    "sidebar content content content"
+    "sidebar header"
+    "sidebar main";
+    height: 100vh;
 }
+
 .navbar {
-    grid-area: navbar;
+    grid-area: header;
+}
+
+ul li {
+    list-style: none;
 }
 
 .sidebar {
     grid-area: sidebar;
+    background-color: var(--theme-color);
+    color: #eee;
+}
+
+.logo {
+    display: grid;
+    grid-template-columns: 60px 1fr;
+    grid-template-rows: 1fr;
+    justify-content: center;
+}
+
+.logo img {
+    width: 42px;
+    height: 42px;
+    margin: 20px;
+}
+
+.logo a {
+    color: #eee;
+    text-decoration: none;
+    font-size: 1.8em;
+    padding: 24px;
+}
+
+.menu {
+    font-size: 1.1em;
+}
+
+.menu ul li,
+.menu ul li i {
+    margin: 12px;
+}
+
+.menu a {
+    text-decoration: none;
+    color: #eee;
 }
 
 .content {
