--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: Helvetica, Arial, sans-serif;
     --theme-color: #1A92D3;
+    --main-bg-color: #E2E8F0;
 }
 
 .container {
@@ -15,8 +16,84 @@
     height: 100vh;
 }
 
-.navbar {
+.header {
     grid-area: header;
+    padding: 25px;
+}
+
+.upper-nav {
+    display: grid;
+    grid-template-columns: 30px 1fr 50px 80px 250px;
+    font-size: 1.3em;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.upper-nav a {
+    color: #222;
+    text-decoration: none;
+}
+
+#search {
+    outline: none;
+    width: 95%;
+    border: none;
+    border-radius: 10px;
+    background-color: #aaa;
+    height: 25px;
+    color: #fff;
+}
+
+.lower-nav {
+    display: grid;
+    grid-template-columns: 1.2fr 0.8fr;
+    margin-top: 15px;
+}
+
+.welcome-section {
+    display: grid;
+    grid-template-columns: 70px 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.welcome-section img {
+    width: 60px;
+    height: 60px;
+    grid-column: 1;
+    grid-row: 1 / 3;
+}
+
+.welcome {
+    align-self: end;
+    font-size: 0.8em;
+    font-weight: bold;
+}
+
+.username {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+.functions {
+    display: grid;
+    grid-template-columns: 100px 100px 100px;
+    gap: 10px;
+    justify-content: center;
+    align-items: end;
+}
+
+.functions li {
+    background-color: var(--theme-color);
+    color: #eee;
+    border-radius: 25px;
+    align-content: center;
+    text-align: center;
+    height: 35px;
+}
+
+.functions li:hover {
+     cursor: pointer;
+     color: #fff;
 }
 
 ul li {
@@ -50,12 +127,20 @@ ul li {
 }
 
 .menu {
+    height: 700px;
     font-size: 1.1em;
+    display: grid;
+    justify-content: center;
+    align-items: space-around;
+}
+
+.menu ul:last-child{
+    align-self: end;
 }
 
 .menu ul li,
 .menu ul li i {
-    margin: 12px;
+    margin: 10px 12px;
 }
 
 .menu a {
@@ -63,72 +148,25 @@ ul li {
     color: #eee;
 }
 
-.content {
+.menu a:hover {
+    color: #fff;
+}
+
+.profile-photo {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.main {
+    margin-top: 120px;
+    background-color: var(--main-bg-color);
     display: grid;
-    grid-area: content;
-    grid-template-areas:
-    "projects projects announcements"
-    "projects projects announcements"
-    "projects projects trending-header"
-    "projects projects trending"
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 50px 1fr 1fr 1fr;
 }
 
-.projects {
-    display: grid;
-    grid-area: projects;
-    grid-template-areas:
-    "project-header project-header"
-    "project-item project-item"
-    "project-item project-item"
-    "project-item project-item";
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 30px 1fr 1fr 1fr;
+.main > *,
+.main > * > * {
+    border: 1px solid red;
 }
-
-.project-header {
-    grid-area: project-header;
-    height: 30px;
-
-}
-
-.project-item {
-    padding: 25px;
-}
-
-.project-header,
-.project-title,
-.announcement-header,
-.announcement-title,
-.trending-header {
-    font-weight: bold;
-}
-
-.announcements {
-    grid-area: announcements;
-    grid-template-areas:
-    "announcement-header"
-    "announcement-item"
-    "announcement-item"
-    "announcement-item";
-    grid-template-columns: 1fr;
-    grid-template-rows: 30px 1fr 1fr 1fr;
-}
-
-.announcement-header {
-    grid-area: announcement-header;
-    height: 30px;
-}
-
-.announcement-item {
-    padding: 15px;
-    font-size: 0.75em;
-}
-
-.trending {
-    grid-area: trending;
-}
-
-.trending-item {
-    font-size: 0.75em;
-}
-
