--- a/style.css
+++ b/style.css
@@ -130,6 +130,10 @@ ul li {
     padding: 24px;
 }
 
+.logo a:hover {
+    color: #fff;
+}
+
 .menu {
     height: 700px;
     font-size: 1.1em;
@@ -186,6 +190,10 @@ ul li {
     margin-right: 20px;
 }
 
+.project-header {
+    grid-column: 1 / 2;
+}
+
 .project-item {
     background: #fff;
     border-radius: 20px;
@@ -207,8 +215,12 @@ ul li {
     cursor: pointer;
 }
 
-.project-header {
-    grid-column: 1 / 2;
+.project-buttons {
+    display: grid;
+    grid-template-columns: 1fr 30px;
+    grid-template-rows: 1fr;
+    justify-items: end;
+    margin: 20px 10px 0 10px;
 }
 
 .announcement-header {
@@ -337,4 +349,57 @@ ul li {
 .image-credit:hover:after {
     display: block;
     transform: translate(-50%, 110%) scale(1);
+}
+
+@media only screen and (max-width: 1200px) {
+    .logo img {
+        width: 35px;
+        height: 35px;
+    }
+
+    .logo a {
+        font-size: 1.25em;
+        margin-left: -20px;
+    }
+
+    .menu{
+        font-size: 1em;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .logo img {
+        width: 25px;
+        height: 25px;
+    }
+    .logo a {
+        font-size: 1em;
+    }
+
+    .menu {
+        font-size: 0.8em;
+    }
+}
+
+@media only screen and (max-width: 876px) {
+    .menu {
+        font-size: 1.2em;
+    }
+}
+
+@media only screen and (max-width: 720px) {
+
+    .logo img {
+        width: 45px;
+        height: 45px;
+    }
+
+    .logo a {
+        display: none;
+    }
+
+    .menu {
+        font-size: 1.2em;
+    }
+
 }
