--- a/style.css
+++ b/style.css
@@ -433,3 +433,37 @@ ul li {
         grid-template-rows: 50px;
     }
 }
+
+@media only screen and (max-width: 520px) {
+
+    .header {
+        grid-template-rows: 50px 100px;
+    }
+    
+    .welcome-section {
+        display: none;
+    }
+    
+    .functions {
+        grid-area: 2 / 1 / 3 / 2;
+        grid-template-columns: 80px;
+        grid-template-rows: repeat(3, 20px);
+        gap: 25px;
+        font-size: 0.8em;
+    }
+
+    .project-item,
+    .announcement-item,
+    .trending-item {
+        font-size: 0.8em;
+    }
+
+    .announcement-container,
+    .trending-container {
+        width: 70%;
+    }
+
+    .footer {
+        font-size: 0.8em;
+    }
+}
