--- a/style.css
+++ b/style.css
@@ -386,7 +386,13 @@ ul li {
     .lower-nav {
         grid-template-columns: 1fr;
         grid-template-rows: repeat(2, 50px);
-        place-items: center;
+        justify-content: start;
+        font-size: 0.8em;
+    }
+
+    .welcome-section img {
+        width: 50px;
+        height: 50px;
     }
 
     .main {
@@ -445,7 +451,7 @@ ul li {
     }
     
     .functions {
-        grid-area: 2 / 1 / 3 / 2;
+        grid-area: 1 / 1 / 3 / 2;
         grid-template-columns: 80px;
         grid-template-rows: repeat(3, 20px);
         gap: 25px;
